# wayne

./: .gitattributes  .gitignore  CLAUDE.md  README.md  _orchestrator_smoke.py  _smoke_test.py  grid-map-engineering-brief.md  lighthouserc.js  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  wayne-workflows-brief.md
.github/workflows/: ci.yml
data_root/bundle/snapshot_20260415_rts_gmlc/: branches.parquet  buses.parquet  generators.parquet  loads.parquet  manifest.json
data_root/bundle/snapshot_latest/: bundle.duckdb
docs/: MONOREPO.md  synthetic-grid-layer-plan.md
gridagent-atlas/: .gitignore  index.html  tsconfig.json  vite.config.ts
gridagent-atlas/src/: data.ts  main.ts  theme.ts
gridagent-data/: .gitignore  README.md  pyproject.toml
gridagent-data/dbt/: profiles.yml
gridagent-data/docs/: canonical_schema.md
gridagent-data/src/gridagent_data/: __init__.py  cli.py  paths.py  provenance.py
gridagent-data/tests/: test_exporters.py  test_pudl_bronze.py
gridagent-julia/: .gitignore
gridagent-julia/src/: production_cost.jl  result.jl  system.jl
gridagent-julia/test/: runtests.jl
gridagent-mcp/: README.md  pyproject.toml
gridagent-orchestrator/: README.md  pyproject.toml
gridagent-orchestrator/src/gridagent_orchestrator/: __init__.py  context.py  episode.py  overlay_export.py  planner.py  retrieval.py  run.py
gridagent-orchestrator/src/gridagent_orchestrator/trajectory_store/: n1_screen_and_mitigate.md  queue_cluster_study.md  single_day_pcm.md  stress_test.md
gridagent-tools/: README.md  pyproject.toml
gridagent-tools/src/gridagent_tools/: data_tools.py  scenario_tools.py  snapshot.py  study_tools.py
gridagent-tools/src/gridagent_tools/backends/: pandapower.py  sienna.py
platform/atlas/: BRANDING.md  README.md  index.html  package-lock.json  package.json  tsconfig.json
platform/atlas/src/: main.ts
platform/data/: README.md  pyproject.toml
platform/data/dbt/: .user.yml  dbt_project.yml  profiles.yml
platform/data/dbt/models/gold_atlas/: _gold_atlas__models.yml  gold_atlas__infrastructure_features.sql
platform/data/dbt/models/gold_market/: gold_market__load_hourly.sql  gold_market__queue_snapshot.sql
platform/data/dbt/models/gold_network/: _gold_network__models.yml
platform/data/dbt/models/silver/osm/: silver_osm__elements.sql  silver_osm__linestrings.sql
platform/data/dbt/models/silver/pudl/: _silver_pudl__models.yml  _silver_pudl__sources.yml  silver_pudl__eia860_plants.sql  silver_pudl__eia_entity_plants.sql
platform/data/dbt/models/silver/queue_feed/: _silver_queue_feed__sources.yml
platform/data/dbt/models/silver/rts_gmlc/: _silver_rts_gmlc__sources.yml  silver_rts_gmlc__branches.sql
platform/data/src/gridagent_data/: cli.py  definitions.py  paths.py
platform/data/src/gridagent_data/assets/: __init__.py
platform/data/src/gridagent_data/exporters/: licenses.py  manifest.py  to_duckdb.py  to_pmtiles.py
platform/data/src/gridagent_data/qa/: README.md  __init__.py  attribution.py  baseline.py  conflation.py  coverage.py  density.py  gate.py  licenses.py  models.py  visual.py
platform/data/src/gridagent_data/schema/: __init__.py  generate_ts.py  models.py
platform/data/src/gridagent_data/sources/afdc/: bronze.py
platform/data/src/gridagent_data/sources/gridstatus/: __init__.py
platform/data/src/gridagent_data/sources/hifld/: __init__.py  bronze.py
platform/data/src/gridagent_data/sources/lbnl/: __init__.py
platform/data/src/gridagent_data/sources/osm/: __init__.py  bronze.py
platform/data/src/gridagent_data/sources/pudl/: __init__.py  bronze.py
platform/data/src/gridagent_data/sources/pypsa_usa/: __init__.py
platform/data/src/gridagent_data/sources/queue_feed/: bronze.py
platform/data/tests/: test_batch3_bronze_loaders.py  test_exporters.py  test_license_sidecar.py  test_qa_density_coverage.py  test_qa_gate.py
platform/data/tests/qa/viewer/: index.html
platform/julia/: Project.toml  README.md  run.jl
platform/julia/src/: GridAgent.jl  contingency.jl  executor.jl  power_flow.jl
platform/mcp/: README.md  pyproject.toml
platform/mcp/src/gridagent_mcp/: __init__.py  server.py
platform/orchestrator/: README.md  pyproject.toml
platform/orchestrator/src/gridagent_orchestrator/: __init__.py  episode.py  overlay_export.py  planner.py  render.py  run.py  verifier.py  workflow.py
platform/orchestrator/src/gridagent_orchestrator/trajectory_store/: baseline_pf.md  capacity_add_feasibility.md  data_exploration.md  islanding_triage.md
platform/orchestrator/src/gridagent_orchestrator/workflows/: n1_contingency.yaml
platform/orchestrator/tests/: conftest.py  test_run.py  test_workflow.py
services/tile-worker/: README.md  package.json  tsconfig.json  wrangler.toml
services/tile-worker/src/: index.ts
shared/api/: README.md  package.json
shared/map/: README.md  package.json  tsconfig.json
shared/schema/: README.md  package.json  tsconfig.json
shared/ui/: README.md  package.json
web/: .gitignore  .prettierignore  README.md  eslint.config.js  package.json  svelte.config.js  vite.config.ts
web/scripts/: link-tiles.sh
web/static/: tiles
(+90 files in other folders)
