[project]
name = "gridagent-orchestrator"
version = "0.0.1"
description = "PowerChain-style verifiable agent loop over the gridagent tool surface"
requires-python = ">=3.11"
dependencies = [
    "gridagent-tools",
    "anthropic>=0.34",
    "pydantic>=2.8",
    "pyyaml>=6.0",
    "rich>=13",
    "numpy>=1.26",
]

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.6"]
embeddings = ["sentence-transformers>=3"]

[project.scripts]
gridagent-orchestrator = "gridagent_orchestrator.run:main"

[tool.uv.sources]
gridagent-tools = { path = "../gridagent-tools", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gridagent_orchestrator"]
