[project]
name = "gridagent-mcp"
version = "0.0.1"
description = "MCP transport that re-exports gridagent-tools to external clients (Claude Desktop, Cursor, etc.)"
requires-python = ">=3.11"
dependencies = [
    "gridagent-tools",
    "mcp>=1.2",
    "pydantic>=2.8",
]

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.6"]

[project.scripts]
gridagent-mcp = "gridagent_mcp.server:main"

[tool.uv.sources]
gridagent-tools = { path = "../tools", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gridagent_mcp"]
