[project]
name = "gridagent-orchestrator"
version = "0.0.1"
description = "PowerChain-style verifiable agent loop over the gridagent tool surface"
requires-python = ">=3.11"
dependencies = [
    "gridagent-tools",
    # pydantic-ai is the agent framework: typed tools, model-agnostic, with
    # ModelRetry as the natural seam for our verifier (RETRY/REPLAN raise
    # ModelRetry; the model gets the supervisory signal back as an error
    # message and re-plans). The [openai] extra brings the OpenAI Python SDK,
    # which speaks the OpenAI-compatible API that Ollama, vLLM, and llama.cpp
    # all expose — local-first by default.
    "pydantic-ai-slim[openai]>=0.0.40",
    "pydantic>=2.8",
    "pyyaml>=6.0",
    "rich>=13",
    "numpy>=1.26",
]

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.6"]
embeddings = ["sentence-transformers>=3"]

[project.scripts]
gridagent-orchestrator = "gridagent_orchestrator.run:main"
gridagent-export-n1-overlay = "gridagent_orchestrator.overlay_export:main"

[tool.uv.sources]
gridagent-tools = { path = "../gridagent-tools", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gridagent_orchestrator"]
